--- a/orders.html
+++ b/orders.html
@@ -9,170 +9,99 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-       :root {
-            --primary-color: #4A90E2;
-            --secondary-color: #F5A623;
-            --background-color: #F0F4F8;
-            --text-color: #333;
-            --border-color: #E1E8ED;
-        }
-
         body {
             font-family: 'Rubik', sans-serif;
-            background-color: var(--background-color);
+            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
             direction: rtl;
-            color: var(--text-color);
         }
-
         .container {
-            max-width: 1200px;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
-        }
-
-        header {
             background-color: white;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            padding: 15px 0;
-            margin-bottom: 30px;
-        }
-
-        .header-content {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .user-profile {
-            display: flex;
-            align-items: center;
-        }
-
-        .user-avatar {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            margin-left: 10px;
-        }
-
-        .user-name {
-            font-weight: 500;
-        }
-
-        h1 {
-            color: var(--primary-color);
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .filters {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-
-        .search-bar {
-            flex-grow: 1;
-            margin-left: 20px;
-        }
-
-        .search-bar input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid var(--border-color);
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        .sort-options select {
-            padding: 10px;
-            border: 1px solid var(--border-color);
-            border-radius: 5px;
-            font-size: 16px;
-            background-color: white;
-        }
-
-        .orders-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-        }
-
-        .order {
-            background-color: white;
-            border: 1px solid var(--border-color);
             border-radius: 8px;
-            padding: 20px;
-            transition: box-shadow 0.3s ease;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: #333;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 8px 8px 0 0;
+        }
+        header img {
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            border: 2px solid white;
+        }
+        header h2 {
+            margin: 0;
+        }
+        .menu {
+            display: flex;
+            gap: 15px;
+        }
+        .menu a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .search-bar {
+            margin: 20px 0;
+            display: flex;
+            justify-content: space-between;
+        }
+        .search-bar input[type="text"] {
+            width: 70%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .search-bar button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .order {
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 4px;
+            transition: transform 0.3s ease;
+        }
         .order:hover {
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            transform: scale(1.02);
         }
-
         .order-header {
             font-weight: bold;
-            margin-bottom: 15px;
-            font-size: 1.1em;
-            color: var(--primary-color);
-            border-bottom: 2px solid var(--secondary-color);
-            padding-bottom: 5px;
-        }
-
-        .order-detail {
             margin-bottom: 10px;
-            display: flex;
-            justify-content: space-between;
+            font-size: 1.1em;
+            color: #333;
         }
-
-        .order-detail span:first-child {
-            font-weight: 500;
-            color: var(--text-color);
+        .order-detail {
+            margin-bottom: 5px;
+            color: #555;
         }
-
         .order-status {
             font-weight: bold;
             color: #4CAF50;
-            text-align: center;
-            margin-top: 15px;
-            padding: 5px;
-            background-color: #E8F5E9;
-            border-radius: 5px;
         }
-
-        .no-orders {
-            text-align: center;
-            color: #666;
-            font-style: italic;
-            grid-column: 1 / -1;
-            padding: 40px;
-            background-color: white;
-            border-radius: 8px;
-        }
-
-        .loading, .error {
+        .no-orders, .loading, .error {
             text-align: center;
             margin-top: 20px;
-            padding: 20px;
-            background-color: white;
-            border-radius: 8px;
         }
-
         .error {
-            color: #D32F2F;
+            color: red;
             font-weight: bold;
-        }
-
-        @media (max-width: 768px) {
-            .filters {
-                flex-direction: column;
-            }
-            .search-bar {
-                margin-left: 0;
-                margin-bottom: 10px;
-            }
         }
     </style>
 </head>
