--- a/סטטיסטיקות.html
+++ b/סטטיסטיקות.html
@@ -242,6 +242,12 @@
   </a>
 </div>
 
+             <div class="menu-item">
+                <a href="כל-ההזמנות.html" style="text-decoration: none; color: inherit;">
+                    <i class="fas fa-list"></i> <span>כל ההזמנות</span>
+                </a>
+            </div>
+
 <div class="menu-item">
   <a href="הגדרות.html" style="text-decoration: none; color: inherit;">
     <i class="fas fa-cog"></i> <span>הגדרות</span>
