--- a/הגדרות.html
+++ b/הגדרות.html
@@ -322,7 +322,12 @@
                   <i class="fas fa-chart-bar"></i> <span>סטטיסטיקות</span>
                 </a>
               </div>
-              
+
+             <div class="menu-item">
+                <a href="כל-ההזמנות.html" style="text-decoration: none; color: inherit;">
+                    <i class="fas fa-list"></i> <span>כל ההזמנות</span>
+                </a>
+            </div>
               <div class="menu-item">
                 <a href="הגדרות.html" style="text-decoration: none; color: inherit;">
                   <i class="fas fa-cog"></i> <span>הגדרות</span>
