--- a/כל-ההזמנות.html
+++ b/כל-ההזמנות.html
@@ -2,6 +2,7 @@
 <html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#6200ea">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>כל ההזמנות - GPI</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
