--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
                 <a href="#">צור קשר</a>
                 <a href="ניהולהזמנות.html">ניהול</a>
                 <a href="דוגמה לדף תשלום.html">דוגמה לדף תשלום</a>
+                <a href="ספקים.html">כניסת ספקים</a>
                 
             </div>
             <p>&copy; 2023 GPI - Global Products Industries Connect. כל הזכויות שמורות.</p>
