--- a/כל-ההזמנות.html
+++ b/כל-ההזמנות.html
@@ -1,25 +1,7 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#6200ea">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>כל ההזמנות - GPI</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -260,8 +242,16 @@
             .search-bar {
                 margin-top: 20px;
                 margin-right: 0;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                padding: 10px;
+                border: 1px solid var(--primary-color);
+                border-radius: 5px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                transition: all 0.3s ease;
             }
         }
+        
     </style>
 </head>
 <body>
@@ -303,14 +293,20 @@
                 </a>
             </div>
         </div>
-        <div class="main-content">
-            <div class="header">
-                <h1>כל ההזמנות</h1>
-                <div class="search-bar">
-                    <i class="fas fa-search"></i>
-                    <input type="text" placeholder="חיפוש הזמנות..." id="searchInput">
+        <div class="profile-container">
+            <img src="default-profile.png" alt="תמונת פרופיל" class="profile-picture" id="profile-picture">
+            <div class="profile-menu" id="profile-menu">
+                <div class="profile-menu-header">
+                    <img src="default-profile.png" alt="תמונת פרופיל" class="profile-menu-picture" id="profile-menu-picture">
+                    <div class="profile-menu-name" id="profile-menu-name">שם המשתמש</div>
                 </div>
+                <div class="profile-menu-email" id="profile-menu-email">user@example.com</div>
+                <button class="profile-menu-button" id="profile-button">הפרופיל שלי</button>
+                <button class="profile-menu-button" id="orders-button">ההזמנות שלי</button>
+                <button class="profile-menu-button" id="settings-button">הגדרות</button>
+                <button class="profile-menu-button" id="logout-button">התנתק</button>
             </div>
+        </div>
             <div id="customerGrid" class="customer-grid">
                 <!-- Customer cards will be dynamically inserted here -->
             </div>
@@ -519,82 +515,75 @@
         });
 
         // Load data when the page loads
-        window.onload = loadData;
+        window.onload = function() {
+            loadData();
+
+            // אתחול Firebase
+            firebase.initializeApp(firebaseConfig);
+
+            const auth = firebase.auth();
+
+            // רשימת האימיילים המורשים
+            const allowedEmails = ["dovgotesman1@gmail.com", "zevi1706@gmail.com", "m0534575029@gmail.com"];
+
+            // פונקציה לבדוק אם המשתמש מחובר ואם האימייל שלו מורשה
+            auth.onAuthStateChanged(user => {
+                if (!user || !allowedEmails.includes(user.email)) {
+                    // אם המשתמש לא מחובר או שהאימייל שלו לא מורשה, הפנה אותו לדף ה-Index
+                    window.location.href = "index.html";
+                } else {
+                    // אם המשתמש מחובר ואימיילו מורשה, עדכן את תמונת הפרופיל ופרטי המשתמש
+                    const profilePicture = document.getElementById('profile-picture');
+                    const profileMenuPicture = document.getElementById('profile-menu-picture');
+                    const profileMenuName = document.getElementById('profile-menu-name');
+                    const profileMenuEmail = document.getElementById('profile-menu-email');
+
+                    profilePicture.src = user.photoURL || 'default-profile.png';
+                    profileMenuPicture.src = user.photoURL || 'default-profile.png';
+                    profileMenuName.textContent = user.displayName || 'משתמש';
+                    profileMenuEmail.textContent = user.email || '';
+                }
+            });
+
+            // טיפול בלחיצה על תמונת הפרופיל
+            document.getElementById('profile-picture').addEventListener('click', () => {
+                document.getElementById('profile-menu').classList.toggle('show');
+            });
+
+            // סגירת התפריט בלחיצה מחוץ לאזור התפריט
+            document.addEventListener('click', (event) => {
+                const profileMenu = document.getElementById('profile-menu');
+                const profilePicture = document.getElementById('profile-picture');
+                if (!profileMenu.contains(event.target) && event.target !== profilePicture) {
+                    profileMenu.classList.remove('show');
+                }
+            });
+
+            // פונקציות לכפתורי התפריט
+            document.getElementById('profile-button').addEventListener('click', () => {
+                console.log('עבור לדף הפרופיל');
+                // הוסף כאן את הקוד לניווט לדף הפרופיל
+            });
+
+            document.getElementById('orders-button').addEventListener('click', () => {
+                console.log('עבור לדף ההזמנות');
+                // הוסף כאן את הקוד לניווט לדף ההזמנות
+            });
+
+            document.getElementById('settings-button').addEventListener('click', () => {
+                console.log('עבור לדף ההגדרות');
+                // הוסף כאן את הקוד לניווט לדף ההגדרות
+            });
+
+            // פונקציה להתנתקות
+            document.getElementById('logout-button').addEventListener('click', () => {
+                auth.signOut().then(() => {
+                    window.location.href = "index.html";
+                }).catch((error) => {
+                    console.error("שגיאה בהתנתקות:", error);
+                });
+            });
+        };
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="he">
-<head>
-    <meta charset="UTF-8">
-    <title>הדף הראשי</title>
-</head>
-<body>
- 
-    <!-- האלמנט שבו נטמיע את התוכן של פרופיל.html -->
-    <div id="profile-content"></div>
-
-    <script>
-        // פונקציה לטעינת התוכן של פרופיל.html
-        function loadProfile() {
-            fetch('פרופיל.html')
-                .then(response => response.text())
-                .then(data => {
-                    // יצירת אלמנט זמני כדי לפרק את התוכן של פרופיל.html
-                    const tempDiv = document.createElement('div');
-                    tempDiv.innerHTML = data;
-
-                    // הוספת ה-CSS
-                    const styles = tempDiv.querySelectorAll('style');
-                    styles.forEach(style => document.head.appendChild(style));
-
-                    // הוספת התוכן ה-HTML
-                    const bodyContent = tempDiv.querySelector('body').innerHTML;
-                    document.getElementById('profile-content').innerHTML = bodyContent;
-
-                    // הוספת ה-JavaScript
-                    const scripts = tempDiv.querySelectorAll('script');
-                    scripts.forEach(script => {
-                        const newScript = document.createElement('script');
-                        newScript.textContent = script.textContent;
-                        document.body.appendChild(newScript);
-                    });
-                })
-                .catch(error => console.error('שגיאה בטעינת הפרופיל:', error));
-        }
-
-        // קריאה לפונקציה לטעינת התוכן
-        loadProfile();
-    </script>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
